adding logging info for consumer