@@ -5,7 +5,7 @@ class=org.perpetualnetworks.mdcrawler.Application
 JAVA_OPTS="-Djavax.net.ssl.sessionCacheSize=10000 -server"
 
 # Setting Max Heap memory based on pod's available memory
-JAVA_OPTS="${JAVA_OPTS} -XX:MaxRAMPercentage=80.0"
+JAVA_OPTS="${JAVA_OPTS} -XX:MaxRAMPercentage=50.0 -XX:MaxPermSize=1024m"
 
 # debugging options.
 #JAVA_OPTS="${JAVA_OPTS} -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5006"
